--- a/index.html
+++ b/index.html
@@ -47,12 +47,11 @@
         <div class="container">
               <!--About Section Text Frame-->
               <h2>Welcome!</h2>
-              <p>Last Space Sandwich Studios is a experimental team of highschool students based in</p>
-              <p>the Ottawa Valley. We've always loved trying new things so we created this group to</p>
-              <p>experiment. Thus far we've participated in multiple game jams and we're currently trying</p>
-              <p>other mediums of media as well. Our intergalactic crew consists of Pace Marier,</p>
-              <p>Andrew Schwan, and occasionally the bizzare man known as Dawson Cuff. Here we'll</p>
-              <p>post interesting things we've tried and experienced. Who knows what we could do next!</p>
+              <p>Last Space Sandwich Studios is an indie game developer team based in</p>
+              <p>the Ottawa Valley. We currently only participate in game jams, but</p>
+              <p>we may eventually make a full fledged game. Our intergalactic crew</p>
+              <p>consists of Pace Marier, Andrew Schwan, and occasionally the bizzare</p>
+              <p>man known as Dawson Cuff. Who knows what we could do next!</p>
             <!--Game images frame-->
             <div class="row">
               <div class="col-md-4">
