--- a/about-andrew.html
+++ b/about-andrew.html
@@ -47,7 +47,11 @@
         <div class="container">
           <!--About me text frame-->
           <h2>About Me!</h2>
-          <p>Andrew is a programmer and an electronic guru. May also be a cyborg.</p>
+          <p>Hi! My name is Andrew Schwan! I am a 15 year old programmer</p>
+          <p>and writer from the Ottawa Valley. I enjoy video game design,</p>
+          <p>building computers, and hockey. I've participated in 2 game jams</p>
+          <p>thus far and im looking forward to participating in more of them in</p>
+          <p>the future. I am also one of the cofounders of Last Space Sandwich Studios</p>
             <!--Center photo frame-->
             <div class="col-md-4 col-md-offset-4">
               <div class="thumbnail">
@@ -59,33 +63,34 @@
       </div>
       <!--Contact info, games, and projects text frame-->
       <div class="learn-more">
-	      <div class="container">
-		      <div class="row">
-	          <div class="col-md-4">
+	<div class="container">
+	  <div class="row">
+	    <div class="col-md-4">
               <div align="center">
-			          <h3>Contact Me</h3>
-                <p><a href="https://twitter.com/aschwan41"><button type="button" class="btn btn-info btn-xs">Twitter</button></a></p>
-                <p><a href="https://www.youtube.com/user/aschwan41"><button type="button" class="btn btn-danger btn-xs">Youtube</button></a>
-                <a href="mailto:#"><button type="button" class="btn btn-success btn-xs">Email</button></a></p>
+	        <h3>Contact Me</h3>
+                <p><a href="https://twitter.com/aschwan41"><button type="button" class="btn btn-info btn-xs">Twitter</button></a>
+                <a href="https://www.youtube.com/user/aschwan41"><button type="button" class="btn btn-danger btn-xs">Youtube</button></a></p>
+                <p><a href="mailto:aschwan41@hotmail.com"><button type="button" class="btn btn-success btn-xs">Email</button></a>
+                <a href="pdf/andrew-resume.pdf"><button type="button" class="btn btn-warning btn-xs">Resume</button></a></p>
               </div>
-	          </div>
-		        <div class="col-md-4">
+	    </div>
+	    <div class="col-md-4">
               <div align="center">
-			          <h3>Games I've Worked On</h3>
-			          <p><a href="http://www.ludumdare.com/compo/ludum-dare-30/?action=preview&uid=39779"><button type="button" class="btn btn-danger btn-xs">Elevatr</button></a>
+	        <h3>Games I've Worked On</h3>
+	        <p><a href="http://www.ludumdare.com/compo/ludum-dare-30/?action=preview&uid=39779"><button type="button" class="btn btn-danger btn-xs">Elevatr</button></a>
                 <a href="http://www.epicgamejam.com/game/epic-dungeon-quest/"><button type="button" class="btn btn-success btn-xs">Epic Dungeon Run</button></a></p>
               </div>
-		        </div>
-		        <div class="col-md-4">
-              <div align="center">
-			          <h3>Current Projects</h3>
-			          <p>World Domination.</p>
-			          <!--<p><a href="#">:P</a></p>-->
-              </div>
-		        </div>
-	        </div>
-	      </div>
 	    </div>
+	    <div class="col-md-4">
+              <div align="center">
+	       <h3>Current Projects</h3>
+	       <p>World Domination.</p>
+	       <!--<p><a href="#">:P</a></p>-->
+              </div>
+	    </div>
+	  </div>
+	</div>
+      </div>
     </div>
   </body>
   <footer>
