--- a/about-andrew.html
+++ b/about-andrew.html
@@ -70,7 +70,7 @@
 	        <h3>Contact Me</h3>
                 <p><a href="https://twitter.com/aschwan41"><button type="button" class="btn btn-info btn-xs">Twitter</button></a>
                 <a href="https://www.youtube.com/user/aschwan41"><button type="button" class="btn btn-danger btn-xs">Youtube</button></a></p>
-                <p><a href="mailto:aschwan41@hotmail.com"><button type="button" class="btn btn-success btn-xs">Email</button></a>
+                <p><a href="mailto:aschwan41@spacesandwich.me"><button type="button" class="btn btn-success btn-xs">Email</button></a>
                 <a href="pdf/andrew-resume.pdf"><button type="button" class="btn btn-warning btn-xs">Resume</button></a></p>
               </div>
 	    </div>
@@ -102,7 +102,7 @@
         <ul class="pull-right">
           <li>Website made by Pace D. Marier -</li>
           <li> Contact:</li>
-          <li><a href="mailto:pacemarier99@hotmail.com">pacemarier@hotmail.com</a>.</li>
+          <li><a href="mailto:pacemarier@spacesandwich.me">pacemarier@spacesandwich.me</a>.</li>
         </ul>
       </div>
     </div>
