--- a/about-pace.html
+++ b/about-pace.html
@@ -75,7 +75,7 @@
 			          <p>Do you want to hire me to build you a website? Or maybe you want to discuss something interesting.</p>
 			          <p><a href="https://twitter.com/Zapboy30Pro"><button type="button" class="btn btn-info btn-xs">Twitter</button></a>
                 <a href="https://www.youtube.com/user/Zapboy30"><button type="button" class="btn btn-danger btn-xs">Youtube</button></a></p>
-                <p><a href="mailto:pacemarier99@hotmail.com"><button type="button" class="btn btn-success btn-xs">Email</button></a>
+                <p><a href="mailto:pacemarier@spacesandwich.me"><button type="button" class="btn btn-success btn-xs">Email</button></a>
                 <a href="pdf/pace-resume.pdf"><button type="button" class="btn btn-warning btn-xs">My Resume</button></a></p>
               </div>
             </div>
@@ -93,7 +93,7 @@
               <div align="center">
 			          <h3>Current Projects</h3>
 			          <p>Want to see the projects that im working on? Click the big red button to go to my blog!</p>
-			          <p><a href="#"><button type="button" class="btn btn-danger btn-xl">My Blog</button></a></p>
+			          <p><a href="blog.spacesandwich.me"><button type="button" class="btn btn-danger btn-xl">My Blog</button></a></p>
               </div>
 		        </div>
 	        </div>
@@ -110,7 +110,7 @@
         <ul class="pull-right">
           <li>Website made by Pace D. Marier -</li>
           <li> Contact:</li>
-          <li><a href="mailto:pacemarier99@hotmail.com">pacemarier@hotmail.com</a>.</li>
+          <li><a href="mailto:pacemarier@spacesandwich.me">pacemarier@spacesandwich.me</a>.</li>
         </ul>
       </div>
     </div>
