--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
               <div align="center">
 			          <h3>Contact Us</h3>
 			          <p>Want to contact us? We can answer questions if you are experiencing any problems with our games and we're always open to hearing your opinion about our games!</p>
-			          <p><a href="mailto:#"><button type="button" class="btn btn-success btn-xs">General Contact</button></a></p>
+			          <p><a href="mailto:support@spacesandwich.me"><button type="button" class="btn btn-success btn-xs">General Contact</button></a></p>
               </div>
 	          </div>
 		        <div class="col-md-6">
@@ -76,7 +76,7 @@
         <ul class="pull-right">
           <li>Website made by Pace D. Marier -</li>
           <li> Contact:</li>
-          <li><a href="mailto:pacemarier99@hotmail.com">pacemarier@hotmail.com</a>.</li>
+          <li><a href="mailto:pacemarier@spacesandwich.me">pacemarier@spacesandwich.me</a>.</li>
         </ul>
       </div>
     </div>
