--- a/games.html
+++ b/games.html
@@ -106,7 +106,7 @@
         <ul class="pull-right">
           <li>Website made by Pace D. Marier -</li>
           <li> Contact:</li>
-          <li><a href="mailto:pacemarier99@hotmail.com">pacemarier@hotmail.com</a>.</li>
+          <li><a href="mailto:pacemarier@spacesandwich.me">pacemarier@spacesandwich.me</a>.</li>
         </ul>
       </div>
     </div>
