--- a/about-pace.html
+++ b/about-pace.html
@@ -93,7 +93,7 @@
               <div align="center">
 			          <h3>Current Projects</h3>
 			          <p>Want to see the projects that im working on? Click the big red button to go to my blog!</p>
-			          <p><a href="blog.spacesandwich.me"><button type="button" class="btn btn-danger btn-xl">My Blog</button></a></p>
+			          <p><a href="http://www.blog.spacesandwich.me"><button type="button" class="btn btn-danger btn-xl">My Blog</button></a></p>
               </div>
 		        </div>
 	        </div>
