--- a/contact.html
+++ b/contact.html
@@ -72,6 +72,7 @@
       <div class="container">
         <ul class="pull-left">
           <li>Last Space Sandwich Studio 2014</li>
+          <li> - Powered with <a href="http://www.github.com">Github</a></li>
         </ul>
         <ul class="pull-right">
           <li>Website made by Pace D. Marier -</li>
