--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,8 @@
 			          <h3>We're Social</h3>
 			          <p>You can easily contact us via our various social media pages!</p>
                 <p><a href="https://twitter.com/LastSSStudio"><button type="button" class="btn btn-info btn-xs">Twitter</button></a></p>
-                <p><a href="#"><button type="button" class="btn btn-primary btn-xs">Facebook</button></a>
-                <a href="#"><button type="button" class="btn btn-danger btn-xs">Youtube</button></a></p>
+                <p><a href="https://www.facebook.com/LastSSStudios"><button type="button" class="btn btn-primary btn-xs">Facebook</button></a>
+                <a href="https://www.youtube.com/user/spacesandwichstudios"><button type="button" class="btn btn-danger btn-xs">Youtube</button></a></p>
               </div>
 		        </div>
 	        </div>
