--- a/about-andrew.html
+++ b/about-andrew.html
@@ -77,6 +77,7 @@
 	    <div class="col-md-4">
               <div align="center">
 	        <h3>Games I've Worked On</h3>
+	        <p>All of the games I have made to this date are <b><i><u>prototypes</u></i></b> made in a small time frame.<p>
 	        <p><a href="http://www.ludumdare.com/compo/ludum-dare-30/?action=preview&uid=39779"><button type="button" class="btn btn-danger btn-xs">Elevatr</button></a>
                 <a href="http://www.epicgamejam.com/game/epic-dungeon-quest/"><button type="button" class="btn btn-success btn-xs">Epic Dungeon Run</button></a></p>
               </div>
