--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
               <p>Andrew Schwan, Pace Marier, and occasionally the bizzare Dawson Cuff.</p>
             <!--Game images frame-->
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-6">
+               <div align="center"></div>
                 <div class="thumbnail">
-                  <a href="http://www.epicgamejam.com/game/epic-dungeon-quest/">
-                    <img src="img/EDQ.bmp"/>
+                  <a href="http://itch.io/jam/the-neo-jam/">
+                    <img src="img/NEO.bmp"/>
                   </a>
                 </div>
+               </div>
               </div>
-              <div class="col-md-4">
+              <!--<div class="col-md-4">
                 <div class="thumbnail">
                   <a href="http://fancywalrus.itch.io/snow">
                     <img src="img/SNO.bmp"/>
@@ -72,7 +74,7 @@
                   <a href="http://www.ludumdare.com/compo/ludum-dare-30/?action=preview&uid=39779">
                     <img src="img/VTR.bmp"/>
                   </a>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
