--- a/index.html
+++ b/index.html
@@ -53,14 +53,12 @@
               <p>Andrew Schwan, Pace Marier, and occasionally the bizzare Dawson Cuff.</p>
             <!--Game images frame-->
             <div class="row">
-              <div class="col-md-6">
-               <div align="center"></div>
+              <div class="col-md-6 col-md-offset-4">
                 <div class="thumbnail">
                   <a href="http://itch.io/jam/the-neo-jam/">
                     <img src="img/NEO.bmp"/>
                   </a>
                 </div>
-               </div>
               </div>
               <!--<div class="col-md-4">
                 <div class="thumbnail">
