--- a/about-andrew.html
+++ b/about-andrew.html
@@ -50,7 +50,7 @@
           <p>Hi! My name is Andrew Schwan! I am a 15 year old programmer</p>
           <p>and writer from the Ottawa Valley. I enjoy video game design,</p>
           <p>building computers, and hockey. I've participated in 2 game jams</p>
-          <p>thus far and im looking forward to participating in more of them in</p>
+          <p>thus far and i'm looking forward to participating in more of them in</p>
           <p>the future. I am also one of the cofounders of Last Space Sandwich Studios</p>
             <!--Center photo frame-->
             <div class="col-md-4 col-md-offset-4">
