--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             <div class="col-md-5 col-md-offset-1">
               <h2 class="featurette-heading-games">Contact Us</h2>
               <p class="lead">Want to contact us? We can answer questions if you are experiencing any problems with our games and we're always open to hearing your opinion about our games!</p>
-              <p><a href="mailto:#"><button type="button" class="btn btn-success btn-xs">General Contact</button></a></p>
+              <p><a href="mailto:support.spacesandwich.me"><button type="button" class="btn btn-success btn-xs">General Contact</button></a></p>
             </div>
             <div class="col-md-4 col-md-offset-1">
               <img class="thumbnail" src="img/contact.bmp" alt="Generic placeholder image" style="width:250px">
@@ -65,8 +65,8 @@
               <h2 class="featurette-heading-games">We're Social</h2>
               <p class="lead">You can easily contact us via our various social media pages!</p>
               <p><a href="https://twitter.com/LastSSStudio"><button type="button" class="btn btn-info btn-xs">Twitter</button></a></p>
-              <p><a href="#"><button type="button" class="btn btn-primary btn-xs">Facebook</button></a>
-              <a href="#"><button type="button" class="btn btn-danger btn-xs">Youtube</button></a></p>
+              <p><a href="https://facebook.com/LastSSStudio"><button type="button" class="btn btn-primary btn-xs">Facebook</button></a>
+              <a href="https://www.youtube.com/user/spacesandwichstudios"><button type="button" class="btn btn-danger btn-xs">Youtube</button></a></p>
             </div>
         </div>
       </div>
