--- a/index.html
+++ b/index.html
@@ -112,12 +112,11 @@
       <div class="container">
             <!-- About Section -->
             <h2>Welcome!</h2>
-            <p>Last Space Sandwich Studios is a experimental team of highschool students based in</p>
-            <p>the Ottawa Valley. We've always loved trying new things so we created this group to</p>
-            <p>experiment. Thus far we've participated in multiple game jams and we're currently trying</p>
-            <p>other mediums of media as well. Our intergalactic crew consists of Pace Marier,</p>
-            <p>Andrew Schwan, and occasionally the bizzare man known as Dawson Cuff. Here we'll</p>
-            <p>post interesting things we've tried and experienced. Who knows what we could do next!</p>
+            <p>Last Space Sandwich Studio is an indie game developer team based in</p>
+            <p>the Ottawa Valley. We currently only participate in game jams, but we may</p>
+            <p>eventually make a full fledged game. Our intergalactic crew consists of</p>
+            <p>Andrew Schwan, Pace Marier, and occasionally the bizzare Dawson Cuff.</p>
+
       </div>
      </div>
 
