--- a/about-andrew.html
+++ b/about-andrew.html
@@ -82,7 +82,8 @@
           <div class="col-md-4">
             <div align="center">
               <h3>Current Projects</h3>
-              <p>World Domination.</p>
+              <p>World Domination in Civilization 5.</p>
+              <p> As Gandhi. With Nukes.</p>
             </div>
           </div>
         </div>
