--- a/about-andrew.html
+++ b/about-andrew.html
@@ -29,7 +29,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Andrew <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="about-andrew.html">About</a></li>
-              <li><a href="#">Blog</a></li>
+              <li><a href="http://www.aschwan41.tumblr.com">Blog</a></li>
             </ul>
           </li>
           <li class="dropdown">
